# harimu

./: .gitignore  Cargo.toml  LICENSE  README.md  whitepaper.md
.harimu/: agents.json  state.json  wallets.json
godot/extension/: Cargo.toml
godot/extension/src/: lib.rs
godot/project/: default_env.tres  project.godot
godot/project/addons/harimu/: WorldView.gd  harimu.gdextension  world_view.tscn
src/: lib.rs
src/commands/: agent.rs  mod.rs  wallet.rs  world.rs
src/modules/: agent.rs  agents.rs  mod.rs  ore.rs  qi.rs  state.rs  stats.rs  structure.rs  view.rs  vm.rs  wallet.rs  world.rs
