[package]
name = "harimu"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
sha2 = "0.10"
rand = "0.8"
hex = "0.4"
serde_toon = "0.2"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
which = "6"
